--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "jest": "27.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.6",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.0",
     "react-test-renderer": "17.0.2",
@@ -57,7 +57,7 @@
     "@types/node": "16.7.13",
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
-    "@types/react-redux": "7.1.22",
+    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "5.3.3",
     "@types/react-test-renderer": "17.0.1",
     "@types/redux-form": "8.3.3",
