--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jest": "27.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.45.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.0",
